--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>SocialSparrow Product Extractor</title>
+  <title>AstuteAnaconda Product Extractor</title>
   <style>
     body {
       width: 300px;
@@ -24,7 +24,7 @@
   </style>
 </head>
 <body>
-  <h3>SocialSparrow Product Extractor</h3>
+  <h3>AstuteAnaconda Product Extractor</h3>
   <p>Click the button below to extract products from the current page:</p>
   <button id="extractBtn">Extract Products</button>
   <script src="popup.js"></script>
